--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,6 @@
-/* css styles */
+@media (prefers-color-scheme: light) {
+    .footer > * {
+        background-color: #f8f9fa;
+        color: black;
+    }
+}
