fix: darkmode github dropdown css

--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -5,8 +5,8 @@ $body-bg: #181818;
 $body-color: white;
 $link-color: #75AADB;
 
-//$dropdown-link-hover-color:WhiteSmoke;
-//$dropdown-link-hover-bg: dimgray;
+$dropdown-link-hover-color:WhiteSmoke;
+$dropdown-link-hover-bg: dimgray;
 
 
 
