--- a/misc/theme-dark.scss
+++ b/misc/theme-dark.scss
@@ -5,6 +5,8 @@ $body-bg: #181818;
 $body-color: white;
 $link-color: #75AADB;
 
+
+// dropdown menu(Github etc.)
 $dropdown-link-hover-color:WhiteSmoke;
 $dropdown-link-hover-bg: dimgray;
 
@@ -37,19 +39,87 @@ $caret-vertical-align:0.8em;
 
 
 
+// USE !important to override
+
 
 // Code blocks
 $code-block-bg-alpha: -.8;
 
-
+// Darkmode footer
 .footer > * {
     background-color: #375a7f !important;
     color: #b0c4de !important;
 }
 
-
+// Darkmode title banner
 .quarto-title-banner {
     margin-bottom: 1em  !important;
     color: #fdfdfe !important;
     background: #4d688a  !important;
+}
+
+
+// Code output
+pre {
+    display: block;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    overflow: auto;
+    font-size: 0.875em;
+    color: #a7b2d1 !important;
+    background-color: #f8f9fa;
+    padding: .5rem;
+    border: 1px solid var(--bs-border-color, #dee2e6)
+}
+
+
+// clipboard.js popup(tooltip)
+.tooltip {
+    --bs-tooltip-zindex: 1080;
+    --bs-tooltip-max-width: 200px;
+    --bs-tooltip-padding-x: 0.5rem;
+    --bs-tooltip-padding-y: 0.25rem;
+    --bs-tooltip-margin: ;
+    --bs-tooltip-font-size: 0.875rem;
+    --bs-tooltip-color: #fff;
+    --bs-tooltip-bg: #75AADB !important;
+    --bs-tooltip-border-radius: 0.25rem;
+    --bs-tooltip-opacity: 0.9;
+    --bs-tooltip-arrow-width: 0.8rem;
+    --bs-tooltip-arrow-height: 0.4rem;
+    z-index: var(--bs-tooltip-zindex);
+    display: block;
+    margin: var(--bs-tooltip-margin);
+    font-family: "Source Sans Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: left;
+    text-align: start;
+    text-decoration: none;
+    text-shadow: none;
+    text-transform: none;
+    letter-spacing: normal;
+    word-break: normal;
+    white-space: normal;
+    word-spacing: normal;
+    line-break: auto;
+    font-size: var(--bs-tooltip-font-size);
+    word-wrap: break-word;
+    opacity: 0
+}
+
+
+// `code`
+code {
+    font-size: 0.875em;
+    color: var(--bs-code-color);
+    background-color: #f8f9fa;
+    padding: .125rem .25rem;
+    word-wrap: break-word
+}
+
+p code:not(.sourceCode),li code:not(.sourceCode),td code:not(.sourceCode) {
+    background-color: #4d7fb4 !important;
+    padding: .2em
 }
