--- a/data/about/grid.css
+++ b/data/about/grid.css
@@ -1,3 +1,7 @@
-div {
-    place-self: center !important; /* new */
-  }
+.grid {
+  display: grid;
+  grid-gap: 5px;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(400px,1fr));
+}
